--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-sonarjs": "^0.25.0",
     "eslint-plugin-unicorn": "^51.0.1",
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "nanoid": "3.3.4"
