--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
     "import/prefer-default-export": "off",
     "unicorn/no-null": "off",
     "unicorn/prevent-abbreviations": "off",
-    "no-console": "warn",
+    "no-console": "error",
     "no-restricted-syntax": "off",
     "import/no-extraneous-dependencies": "off",
     "@typescript-eslint/no-explicit-any": "off",
