--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express-validator": "^7.0.1",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "nanoid": "3.3.4"
+    "nanoid": "3.3.4",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
