fix: mongo connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,15 @@
 version: '3.7'
 services:
   mongo:
-    image: 'mongo:latest'
+    image: 'mongo'
     restart: unless-stopped
     ports:
       - ${MONGO_PORT}:27017
     env_file:
       - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGO_USERNAME}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGO_PASSWORD}
     volumes:
       - ./data:/data/db
 
