--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
-
 name: Integration Workflow
 
 on:
@@ -36,4 +33,6 @@ jobs:
 
       - name: Build dist
         run: yarn run build
-      # - run: npm test
+
+      - name: Run Tests
+        run: yarn run test
