--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "yarn build && node dist/index.js",
     "dev": "nodemon src/index.ts",
     "lint": "eslint . --ext .ts,.js",
+    "test": "jest",
     "docker:up-server-logs": "docker compose up -d && docker compose logs -f server"
   },
   "keywords": [],
@@ -15,28 +16,35 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dockerode": "^4.0.2",
+    "dockerode-utils": "^0.0.7",
     "dotenv": "^16.4.5",
     "eslint-plugin-sonarjs": "^0.25.0",
     "eslint-plugin-unicorn": "^51.0.1",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "nanoid": "3.3.4",
+    "supertest": "^6.3.4",
     "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dockerode": "^3.3.28",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/mime": "^4.0.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
   }
