--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "nodemon src/index.ts",
     "lint": "eslint . --ext .ts,.js",
     "test": "jest",
-    "docker:up-server-logs": "docker compose up -d && docker compose logs -f server"
+    "docker:up-server-logs": "docker compose up -d && docker compose logs -f server",
+    "compose:up": "docker compose up"
   },
   "keywords": [],
   "author": "",
@@ -43,6 +44,7 @@
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0",
